mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    /*description*/
+    <section id="description">
+        <p>You need to make it as easy as possible for recruiters and employers to contact you, so put your contact details at the very top of your CV in big bold text. Neverhide them</p>
+    </section>
     
 </body>
 </html>
