mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             </div>
           </div>
     </section>
+
+    <section id="competences">
+        <p>srs</p>
+        <p></p>
+    </section>
     
 </body>
 </html>
