mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
     </section>
 
     <section id="competences">
-        <p>srs</p>
-        <p></p>
+        <p>system reseau </p>
+        <p>3D animation</p>
+    </section>
+
+    <section id="associations">
+        <p>ASODAS</p>
     </section>
     
 </body>
